se añade agregar imagen
se prepara el campo aun sin funcionalidad

--- a/catalogos.html
+++ b/catalogos.html
@@ -12,8 +12,34 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="CSS/estilo.css">
   <link rel="stylesheet" type="text/css" href="CSS/img.css">
+  <style>
+  body {
+      position: relative;
+  }
+  .affix {
+      top: 60px;
+      z-index: 9999 !important;
+  }
+  div.col-sm-9 div {
+      height: 100%;
+      
+  }
+  #section1 {color: #fff; background-color: #1E88E5;}
+  #section2 {color: #fff; background-color: #673ab7;}
+  #section3 {color: #fff; background-color: #ff9800;}
+  #section41 {color: #fff; background-color: #00bcd4;}
+  #section42 {color: #fff; background-color: #009688;}
+  
+  @media screen and (max-width: 810px) {
+    #section1, #section2, #section3, #section41, #section42  {
+        margin-left: 110px;
+    }
+  }
+  </style>
+
+
 </head>
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+<body id="myPage" data-spy="scroll"   data-target="#myScrollspy" data-offset="15">
 
 <nav class="navbar navbar-default navbar-fixed-top">
 
@@ -33,7 +59,7 @@
         <li><a href="#services">CATEGORIA</a></li>
         <li><a href="#services">CATALOGO</a></li>
         <li><a href="#">CONTACTO</a></li>
-        <li><a href=""><span class="glyphicon glyphicon-shopping-cart"></span> CARRO</a></li>
+        <li><a href=""><span class="glyphicon glyphicon-shopping-cart"></span> CARRO <span class="badge">12</span></a></li>
     <li class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> MI CUENTA <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -50,8 +76,60 @@
 
 
 
-<!-- VENTANA MODAL PARA INICIAR SESIÓN-->
+<!-- CONTENIDO -->
+<div class="container-fluid" style="background-color:#2196F3;color:#fff;height:220px;">
+  <h1>Scrollspy & Affix Example</h1>
+  <h3>Fixed vertical sidenav on scroll</h3>
+  <p>Scroll this page to see how the navbar behaves with data-spy="affix" and data-spy="scrollspy".</p>
+  <p>The left menu sticks the page after you have scrolled a specified amount of pixels, and the links in the menu are automatically updated based on scroll position.</p>
+</div>
+<br>
 
+<div class="container">
+  <div class="row">
+    <nav class="col-sm-3" id="myScrollspy">
+      <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
+        <li><a data-toggle="tab"  href="#section1">Novela</a></li>
+        <li><a data-toggle="tab"  href="#section2">Suspenso</a></li>
+        <li><a data-toggle="tab"  href="#section3">Astronomia</a></li>
+      </ul>
+    </nav>
+    <div class="col-sm-9">
+
+      <div class="tab-content">
+    <div id="home" class="tab-pane fade in active">
+      <h3>HOME</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div id="section1" class="tab-pane fade">
+      <h3>Menu 1</h3>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <div id="section2" class="tab-pane fade">
+      <h3>Menu 2</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <br>
+      <h3>Menu 2</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <br>
+      <h3>Menu 2</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <br>
+      <h3>Menu 2</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <br>
+      <h3>Menu 2</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+    </div>
+    <div id="section3" class="tab-pane fade">
+      <h3>Menu 3</h3>
+      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+    </div>
+  </div>
+    
+    </div>
+  </div>
+</div>
 
 
 
