--- a/admon.html
+++ b/admon.html
@@ -98,6 +98,12 @@
         <input type="text" class="form-control" placeholder="Entrada de inventario" v-model="Iexistencia">
       </div>
     </div>
+    <div class="form-group">
+    <label class="control-label col-sm-2">Imagen:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" placeholder="Entrada de inventario" v-model="Iexistencia">
+      </div>
+    </div>
     
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
@@ -135,6 +141,7 @@
         <th>Autor</th>
         <th>Isbn</th>
         <th>Costo</th>
+        <th>Imagen</th>
         <th>Accion</th>
       </tr>
     </thead>
@@ -145,6 +152,7 @@
         <td contenteditable="true" @blur="editarAutor($event, mensaje.key)">{{mensaje.Vautor}}</td>
         <td contenteditable="true" @blur="editarIsbn($event, mensaje.key)">{{mensaje.Visbn}}</td>
         <td contenteditable="true" @blur="editarCosto($event, mensaje.key)">{{mensaje.Vcosto}}</td>
+        <td></td>
         <td><button @click="eliminarMensaje(mensaje.key)" class="btn btn-danger"><span  class="glyphicon glyphicon-trash"></span></button></td>
       </tr>
       
@@ -294,7 +302,7 @@ const vm2 = new Vue({
 		 				costo: mensaje.target.innerHTML,
 		 			});
 		 		},
-		 		eliminar(key){
+		 		eliminarMensaje(key){
 		 			if(confirm('seguro?'))
 		 				db.ref('/base/' + key).remove();
 		 		}
