--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>C A L A</title>
+  <title>Bookseller</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">C A L A</a>
+      <a class="navbar-brand" href="#myPage">Bookseller</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -47,55 +47,30 @@
   </div>
 </nav>
 
-
-  <!-- Banner -->
-    <!--
-      To use a video as your background, set data-video to the name of your video without
-      its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
-      formats to work correctly.
-    -->
-
- <section id="banner" data-video="images/banner">
-        <div class="inner">
-          <h1>C A L A</h1>
-          <p><strong>Excelencia en Jamoneras</strong></p>
-        </div>
-      </section>
-
+<div class="jumbotron text-center">
+  <h1>Book Seller</h1> 
+  <p>Tu mejor opción en Linea</p> 
+</div>
+ 
 
 <!-- Container (About Section) -->
-<div id="about" class="container-fluid">
+<div id="about" class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-8">
       <h2>Acerca de Nuestra Empresa</h2><br>
       <h4>Somos una empresa 100% Mexicana Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas consectetur magna.</h4><br>
-      <p>Madera de pino de gran calidad.
-      Acabado robusto y compacto.
-      Fino aspecto gracias a la capa de barnizado.
-      Higiénicos y de fácil limpieza.
-      Grabado a fuego del logotipo de su empresa en la madera.</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-globe logo slideanim"></span>
+      <span class="glyphicon glyphicon-book logo slideanim"></span>
     </div>
   </div>
 </div>
 
-<div class="container-fluid bg-grey">
-  <div class="row">
-    <div class="col-sm-4">
-     
-    </div>
-    <div class="col-sm-8">
-      <h2>NUESTROS VALORES</h2><br>
-      <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-    </div>
-  </div>
-</div>
+
 
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid text-center">
-  <h2>CATEGORIAS</h2>
+  <h2  style="background-color: #D6E1C7;">CATEGORIAS</h2>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
@@ -103,7 +78,7 @@
       <article class="item">
               <header>
                 <a href="catalogos.html"><img src="images/pic01.jpg" alt="" /></a>
-                <h3>BÁSICO</h3>
+                <h3>NOVELA</h3>
               </header>
       </article>
     </div>
@@ -112,7 +87,7 @@
       <article class="item">
               <header>
                 <a href="#"><img src="images/pic02.jpg" alt="" /></a>
-                <h3>GIRATORIOS</h3>
+                <h3>SUSPENSO</h3>
               </header>
       </article>
     </div>
@@ -121,7 +96,7 @@
        <article class="item">
               <header>
                 <a href="#"><img src="images/pic03.jpg" alt="" /></a>
-                <h3>BASCULANTES</h3>
+                <h3>ASTRONOMIA</h3>
               </header>
      </article>
     </div>
@@ -133,7 +108,7 @@
       <article class="item">
               <header>
                 <a href="#"><img src="images/pic04.jpg" alt="" /></a>
-                <h3>GIRATORIO Y BASCULANTE</h3>
+                <h3>OCIO</h3>
               </header>
       </article>
     </div>
@@ -142,7 +117,7 @@
       <article class="item">
               <header>
                 <a href="#"><img src="images/pic05.jpg" alt="" /></a>
-                <h3>VERTICALES</h3>
+                <h3>HISTORIA</h3>
               </header>
       </article>
     </div>
@@ -151,7 +126,7 @@
        <article class="item">
               <header>
                 <a href="#"><img src="images/pic06.jpg" alt="" /></a>
-                <h3>MESAS</h3>
+                <h3>FILOSOFIA</h3>
               </header>
      </article>
     </div>
